# rvt

./: .gitignore  EARLY_STOPPING_NOTES.md  FINAL_V4_NOTES.md  IMPLEMENTATION_NOTES.md  README.md  requirements.txt  run_experiments.py
ACCESS_latex_template/: .gitignore  access.tex
docs/: PAPER_BLUEPRINT.md  compare.md  mindset.md
latex/: README.md  access.aux  access.bbl  access.blg  access.fdb_latexmk  access.fls  access.out  access.tex  fig_architecture.tex  fig_rfn.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
results_v4_es/: adaptive_formation_rows.json  cbf_qp_like_rows.json  centralized_mpc_rows.json  gnn_only.pt  gnn_only_best.pt  gnn_only_last.pt  gnn_only_rows.json  instant_cert.pt  instant_cert_best.pt  instant_cert_last.pt  instant_cert_rows.json  orca_like_rows.json  rvt_swarm.pt  rvt_swarm_best.pt  rvt_swarm_last.pt  rvt_swarm_rows.json  summary.json
results_v4_es_ablation/: ablations.json
results_v5/: adaptive_formation_rows.json  cbf_qp_like_rows.json  centralized_mpc_rows.json  gnn_only.pt  (+13 more)
ros2_ws/src/rvt_swarm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/rvt_swarm_msgs/msg/: PeerState.msg
ros2_ws/src/rvt_swarm_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/rvt_swarm_ros/config/: swarm_params.yaml  turtlebot3_waffle_pi_rvt_bridge.yaml  turtlebot3_waffle_pi_rvt_bridge_minimal.yaml
ros2_ws/src/rvt_swarm_ros/launch/: multi_turtlebot3_rvt.launch.py
ros2_ws/src/rvt_swarm_ros/resource/: rvt_swarm_ros
ros2_ws/src/rvt_swarm_ros/rvt_swarm_ros/: __init__.py  agent_node.py  experiment_monitor.py  formation.py
ros2_ws/src/rvt_swarm_ros/worlds/: rvt_cluttered.world
(+99 files in other folders)
