<?xml version="1.0"?>
<package format="3">
  <name>rvt_swarm_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for RVT-Swarm ROS 2 integration.</description>
  <maintainer email="tuan.dotrong@hust.edu.vn">RVT-Swarm Authors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export/>
</package>
