<?xml version="1.0"?>
<package format="3">
  <name>rvt_swarm_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 and Gazebo integration layer for RVT-Swarm.</description>
  <maintainer email="tuan.dotrong@hust.edu.vn">RVT-Swarm Authors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_minimal_tb3_sim</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>rvt_swarm_msgs</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
